Add SEO metadata and frontmatter to pages
Added meta description to the HTML head in _document.tsx. Introduced title and description frontmatter to about.mdx and index.mdx for improved SEO. Updated theme.config.tsx to set default SEO title and title template using useNextSeoProps.

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,3 +1,8 @@
+---
+title: Over kokkorel
+description: Alles over kokkorel en onze lekkere gerechten en catering.
+---
+
 # About
 
 This is the about page! This page is shown on the navbar.
