--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,8 @@
+---
+title: Introductie
+description: Kokkorel catering — smaakvolle, betrouwbare en maatwerk foodservice voor elk evenement.
+---
+
 # Introductie
 
 Welkom bij onze catering! Wij leveren smaakvolle, betrouwbare en maatwerk foodservice voor elk evenement.
